updated nav menu links on who-qualifies.html.

--- a/who-qualifies.html
+++ b/who-qualifies.html
@@ -46,7 +46,9 @@
             <li><a href="who-accepts.html">Who Accepts?</a></li>
             <li><a href="who-drives.html">Who Drives?</a></li>
             <li><a href="apply.html">Apply</a></li>
+            <li><a href="after-you-apply.html">After You Apply</a></li>
             <li><a href="faq.html">FAQ</a></li>
+            <li><a href="renewal.html">Renewal</a></li>
           </ul>
         </nav>
       </div>
