fix(nav): enable mobile hamburger toggle with CSS.

--- a/apply.html
+++ b/apply.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>How To Apply | The Kentucky Medicaid Notebook</title>
     <meta
-      name="description"
       content="Where and how to apply for Kentucky Medicaid."
+      name="description"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&amp;display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="assets/favicon.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link href="assets/favicon.png" rel="icon" />
+    <link href="styles.css" rel="stylesheet" />
+    <link
+      crossorigin="True"
+      href="https://fonts.gstatic.com"
+      rel="preconnect"
+    />
   </head>
   <body>
     <a class="skip-link" href="#main">Skip to content</a>
-
     <header class="topbar">
       <div class="wrap">
         <a class="brandlink" href="index.html">
-          <img class="mini-kymn" src="dr-kymn.png" alt="" />
+          <img alt="" class="mini-kymn" src="dr-kymn.png" />
         </a>
-        <nav class="site-nav" aria-label="Primary">
+        <nav aria-label="Primary" class="site-nav">
           <button
-            class="nav-toggle"
             aria-controls="primary-menu"
             aria-expanded="false"
+            class="nav-toggle"
           >
             <span class="sr-only">Menu</span>
-            <span class="bar" aria-hidden="true"></span>
-            <span class="bar" aria-hidden="true"></span>
-            <span class="bar" aria-hidden="true"></span>
+            <span aria-hidden="true" class="bar"></span>
+            <span aria-hidden="true" class="bar"></span>
+            <span aria-hidden="true" class="bar"></span>
           </button>
-
-          <ul id="primary-menu" class="menu">
+          <ul class="menu" id="primary-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="who-qualifies.html">Who Qualifies?</a></li>
             <li><a href="who-accepts.html">Who Accepts?</a></li>
             <li><a href="who-drives.html">Who Drives?</a></li>
-            <li><a href="apply.html" aria-current="page">Apply</a></li>
+            <li><a aria-current="page" href="apply.html">Apply</a></li>
             <li><a href="after-you-apply.html">After You Apply</a></li>
             <li><a href="renewal.html">Renewal</a></li>
             <li><a href="faq.html">FAQ</a></li>
@@ -48,14 +52,12 @@
         </nav>
       </div>
     </header>
-
-    <main id="main" class="container">
+    <main class="container" id="main">
       <h1 class="page-title">How to Apply</h1>
       <p class="lead">
         Choose the route that’s easiest for you. Bring the “Must‑Haves” from the
         home page.
       </p>
-
       <ul class="card-grid" role="list">
         <li class="info-card">
           <h3>Online (fastest)</h3>
@@ -66,13 +68,12 @@
           <p>
             <a
               href="https://kynect.ky.gov/benefits"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >Apply online at kynect.ky.gov</a
             >
           </p>
         </li>
-
         <li class="info-card">
           <h3>By Phone</h3>
           <p>
@@ -80,7 +81,6 @@
           </p>
           <p>Call: <a href="tel:18553068959">1‑855‑306‑8959</a></p>
         </li>
-
         <li class="info-card">
           <h3>In Person</h3>
           <p>
@@ -90,24 +90,23 @@
           <p>
             <a
               href="https://chfs.ky.gov/agencies/dcbs/Pages/default.aspx"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >Find a local DCBS office</a
             >
           </p>
         </li>
       </ul>
     </main>
-
     <footer class="site-footer">
       <p>
         <strong>Dr. KYMN</strong> is a friendly guide, not a medical doctor. Not
         affiliated with any agency. Made in Lexington, KY, by
-        <a href="https://sleepingbear.us" target="_blank" rel="noopener"
+        <a href="https://sleepingbear.us" rel="noopener" target="_blank"
           >Sleeping Bear Labs</a
         >.
       </p>
     </footer>
-    <script src="js/nav.js" defer></script>
+    <script defer="" src="js/nav.js"></script>
   </body>
 </html>
