--- a/renewal.html
+++ b/renewal.html
@@ -1,55 +1,55 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Renewal & Redetermination | The Kentucky Medicaid Notebook</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>
+      Renewal &amp; Redetermination | The Kentucky Medicaid Notebook
+    </title>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta
-      name="description"
       content="How Kentucky Medicaid renewal (redetermination) works: watch for notices, update contact info, respond on time, and keep coverage active."
+      name="description"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&amp;display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="assets/favicon.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link href="assets/favicon.png" rel="icon" />
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <a class="skip-link" href="#main">Skip to content</a>
-
     <header class="topbar">
       <div class="wrap">
         <a class="brandlink" href="index.html">
-          <img class="mini-kymn" src="dr-kymn.png" alt="" />
+          <img alt="" class="mini-kymn" src="dr-kymn.png" />
         </a>
-        <nav class="site-nav" aria-label="Primary">
+        <nav aria-label="Primary" class="site-nav">
           <button
-            class="nav-toggle"
             aria-controls="primary-menu"
             aria-expanded="false"
+            class="nav-toggle"
           >
             <span class="sr-only">Menu</span>
-            <span class="bar" aria-hidden="true"></span>
-            <span class="bar" aria-hidden="true"></span>
-            <span class="bar" aria-hidden="true"></span>
+            <span aria-hidden="true" class="bar"></span>
+            <span aria-hidden="true" class="bar"></span>
+            <span aria-hidden="true" class="bar"></span>
           </button>
-
-          <ul id="primary-menu" class="menu">
+          <ul class="menu" id="primary-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="who-qualifies.html">Who Qualifies?</a></li>
             <li><a href="who-accepts.html">Who Accepts?</a></li>
             <li><a href="who-drives.html">Who Drives?</a></li>
             <li><a href="apply.html">Apply</a></li>
             <li><a href="after-you-apply.html">After You Apply</a></li>
-            <li><a href="renewal.html" aria-current="page">Renewal</a></li>
+            <li><a aria-current="page" href="renewal.html">Renewal</a></li>
             <li><a href="faq.html">FAQ</a></li>
           </ul>
         </nav>
       </div>
     </header>
-
     <header class="site-header">
       <h1 class="brand page-title">Renewal &amp; Redetermination</h1>
       <p class="lead">
@@ -57,29 +57,27 @@
         active.
       </p>
     </header>
-
-    <main id="main" class="container" aria-labelledby="renewal">
-      <h2 id="renewal" class="section-title">Your yearly checklist</h2>
+    <main aria-labelledby="renewal" class="container" id="main">
+      <h2 class="section-title" id="renewal">Your yearly checklist</h2>
       <p class="tag">Plain‑language steps to get through renewal smoothly.</p>
-
       <ul class="card-grid" role="list">
         <li class="info-card">
-          <div class="icon-wrap" aria-hidden="true">
-            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+          <div aria-hidden="true" class="icon-wrap">
+            <svg aria-hidden="true" focusable="false" viewbox="0 0 24 24">
               <circle
                 cx="12"
                 cy="12"
-                r="9"
                 fill="none"
+                r="9"
                 stroke="currentColor"
                 stroke-width="2"
-              />
+              ></circle>
               <path
                 d="M12 7v5l3 2"
                 fill="none"
                 stroke="currentColor"
                 stroke-width="2"
-              />
+              ></path>
             </svg>
           </div>
           <h3>1) Watch for your notice</h3>
@@ -88,21 +86,20 @@
             Open it right away and note any <strong>deadline</strong>.
           </p>
         </li>
-
         <li class="info-card">
-          <div class="icon-wrap" aria-hidden="true">
-            <svg viewBox="0 0 24 24">
+          <div aria-hidden="true" class="icon-wrap">
+            <svg viewbox="0 0 24 24">
               <path
                 d="M4 5h16v14H4z"
                 fill="none"
                 stroke="currentColor"
                 stroke-width="2"
-              />
+              ></path>
               <path
                 d="M7 8h10M7 12h7M7 16h6"
                 stroke="currentColor"
                 stroke-width="2"
-              />
+              ></path>
             </svg>
           </div>
           <h3>2) Update your info first</h3>
@@ -111,17 +108,20 @@
             household. Out‑of‑date info can cause a loss of coverage.
           </p>
         </li>
-
         <li class="info-card">
-          <div class="icon-wrap" aria-hidden="true">
-            <svg viewBox="0 0 24 24">
+          <div aria-hidden="true" class="icon-wrap">
+            <svg viewbox="0 0 24 24">
               <path
                 d="M6 7h12v10H6z"
                 fill="none"
                 stroke="currentColor"
                 stroke-width="2"
-              />
-              <path d="M8 9h8M8 12h6" stroke="currentColor" stroke-width="2" />
+              ></path>
+              <path
+                d="M8 9h8M8 12h6"
+                stroke="currentColor"
+                stroke-width="2"
+              ></path>
             </svg>
           </div>
           <h3>3) Complete and return on time</h3>
@@ -130,22 +130,25 @@
             etc.), upload or send them <strong>before the deadline</strong>.
           </p>
         </li>
-
         <li class="info-card">
-          <div class="icon-wrap" aria-hidden="true">
-            <svg viewBox="0 0 24 24">
+          <div aria-hidden="true" class="icon-wrap">
+            <svg viewbox="0 0 24 24">
               <rect
-                x="5"
-                y="6"
-                width="14"
+                fill="none"
                 height="10"
                 rx="2"
                 ry="2"
-                fill="none"
                 stroke="currentColor"
                 stroke-width="2"
-              />
-              <path d="M8 9h8M8 12h5" stroke="currentColor" stroke-width="2" />
+                width="14"
+                x="5"
+                y="6"
+              ></rect>
+              <path
+                d="M8 9h8M8 12h5"
+                stroke="currentColor"
+                stroke-width="2"
+              ></path>
             </svg>
           </div>
           <h3>4) Watch your messages</h3>
@@ -154,22 +157,21 @@
             more, respond quickly to avoid a gap in coverage.
           </p>
         </li>
-
         <li class="info-card">
-          <div class="icon-wrap" aria-hidden="true">
-            <svg viewBox="0 0 24 24">
+          <div aria-hidden="true" class="icon-wrap">
+            <svg viewbox="0 0 24 24">
               <path
                 d="M12 2a10 10 0 1010 10"
                 fill="none"
                 stroke="currentColor"
                 stroke-width="2"
-              />
+              ></path>
               <path
                 d="M12 6v6l4 2"
+                fill="none"
                 stroke="currentColor"
                 stroke-width="2"
-                fill="none"
-              />
+              ></path>
             </svg>
           </div>
           <h3>5) If you miss it</h3>
@@ -179,16 +181,15 @@
             coverage.
           </p>
         </li>
-
         <li class="info-card">
-          <div class="icon-wrap" aria-hidden="true">
-            <svg viewBox="0 0 24 24">
+          <div aria-hidden="true" class="icon-wrap">
+            <svg viewbox="0 0 24 24">
               <path
                 d="M4 12h16M12 4v16"
+                fill="none"
                 stroke="currentColor"
                 stroke-width="2"
-                fill="none"
-              />
+              ></path>
             </svg>
           </div>
           <h3>6) Report changes year‑round</h3>
@@ -199,7 +200,6 @@
           </p>
         </li>
       </ul>
-
       <details class="faq">
         <summary>How do I upload documents or check my renewal?</summary>
         <p>
@@ -207,41 +207,39 @@
           confirm your status. Keep copies of what you send and note the date.
         </p>
       </details>
-
       <section aria-labelledby="links" style="margin-top: 1rem">
-        <h2 id="links" class="section-title">Official links</h2>
+        <h2 class="section-title" id="links">Official links</h2>
         <p class="tag">Use Kentucky’s official sites to manage renewal.</p>
         <ul>
           <li>
             <a
               href="https://khbe.ky.gov/Enrollment/Pages/MedicaidRenewals.aspx"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >Medicaid renewals (KHBE)</a
             >
           </li>
           <li>
             <a
               href="https://kynect.ky.gov/benefits/s/medicaid-kchip-program?language=en_US"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >kynect — Kentucky’s official portal</a
             >
           </li>
           <li>
             <a
               href="https://khbe.ky.gov/Enrollment/Pages/PHEUnwinding.aspx"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >Keep coverage: notices &amp; what to do (KHBE)</a
             >
           </li>
         </ul>
         <p class="tag"><strong>Last updated:</strong> August 25, 2025</p>
       </section>
-
       <section aria-labelledby="seealso" style="margin-top: 1rem">
-        <h2 id="seealso" class="section-title">See also</h2>
+        <h2 class="section-title" id="seealso">See also</h2>
         <ul>
           <li><a href="after-you-apply.html">After You Apply</a></li>
           <li><a href="required-documents.html">Required Documents</a></li>
@@ -250,16 +248,15 @@
         </ul>
       </section>
     </main>
-
     <footer class="site-footer">
       <p>
         <strong>Dr. KYMN</strong> is a friendly guide, not a medical doctor. Not
         affiliated with any agency. Made in Lexington, KY, by
-        <a href="https://sleepingbear.us" target="_blank" rel="noopener"
+        <a href="https://sleepingbear.us" rel="noopener" target="_blank"
           >Sleeping Bear Labs</a
         >.
       </p>
     </footer>
-    <script src="js/nav.js" defer></script>
+    <script defer="" src="js/nav.js"></script>
   </body>
 </html>
