--- a/what-if-approved.html
+++ b/what-if-approved.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>What If I'm Approved? | The Kentucky Medicaid Notebook</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta
-      name="description"
       content="Plain-language guide to next steps if your Kentucky Medicaid or KCHIP application is approved: what to expect and how to use your coverage."
+      name="description"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&amp;display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="assets/favicon.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link href="assets/favicon.png" rel="icon" />
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <a class="skip-link" href="#main">Skip to content</a>
-
     <header class="topbar">
       <div class="wrap">
         <a class="brandlink" href="index.html">
-          <img class="mini-kymn" src="dr-kymn.png" alt="" />
+          <img alt="" class="mini-kymn" src="dr-kymn.png" />
         </a>
-        <nav class="site-nav" aria-label="Primary">
+        <nav aria-label="Primary" class="site-nav">
           <button
-            class="nav-toggle"
             aria-controls="primary-menu"
             aria-expanded="false"
+            class="nav-toggle"
           >
             <span class="sr-only">Menu</span>
-            <span class="bar" aria-hidden="true"></span>
-            <span class="bar" aria-hidden="true"></span>
-            <span class="bar" aria-hidden="true"></span>
+            <span aria-hidden="true" class="bar"></span>
+            <span aria-hidden="true" class="bar"></span>
+            <span aria-hidden="true" class="bar"></span>
           </button>
-
-          <ul id="primary-menu" class="menu">
+          <ul class="menu" id="primary-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="who-qualifies.html">Who Qualifies?</a></li>
             <li><a href="who-accepts.html">Who Accepts?</a></li>
@@ -46,15 +45,15 @@
             <li><a href="renewal.html">Renewal</a></li>
             <li><a href="faq.html">FAQ</a></li>
             <li>
-              <a href="what-if-denied.html" class="link-denied"
+              <a class="link-denied" href="what-if-denied.html"
                 >What If I'm Denied?</a
               >
             </li>
             <li>
               <a
-                href="what-if-approved.html"
-                class="link-approved"
                 aria-current="page"
+                class="link-approved"
+                href="what-if-approved.html"
                 >What If I'm Approved?</a
               >
             </li>
@@ -62,7 +61,6 @@
         </nav>
       </div>
     </header>
-
     <header class="site-header">
       <h1 class="brand page-title link-approved">What If I'm Approved?</h1>
       <p class="lead">
@@ -70,9 +68,8 @@
         it.
       </p>
     </header>
-
-    <main id="main" class="container" aria-labelledby="approved-steps">
-      <h2 id="approved-steps" class="section-title">What happens next</h2>
+    <main aria-labelledby="approved-steps" class="container" id="main">
+      <h2 class="section-title" id="approved-steps">What happens next</h2>
       <p class="tag">After approval, you’ll usually receive:</p>
       <ul class="card-grid" role="list">
         <li class="info-card"><strong>Approval notice</strong> in the mail</li>
@@ -83,7 +80,6 @@
           <strong>Managed Care Organization (MCO)</strong> enrollment packet
         </li>
       </ul>
-
       <h2 class="section-title">Your next steps</h2>
       <p class="tag">Make the most of your new coverage:</p>
       <ul class="card-grid" role="list">
@@ -129,31 +125,30 @@
           </p>
         </li>
       </ul>
-
       <section aria-labelledby="links" style="margin-top: 1rem">
-        <h2 id="links" class="section-title">Official links</h2>
+        <h2 class="section-title" id="links">Official links</h2>
         <ul>
           <li>
             <a
               href="https://kynect.ky.gov/benefits/s/medicaid-kchip-program?language=en_US"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >kynect — Kentucky’s official portal</a
             >
           </li>
           <li>
             <a
               href="https://chfs.ky.gov/agencies/dms/Pages/default.aspx"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >Kentucky Department for Medicaid Services</a
             >
           </li>
           <li>
             <a
               href="https://chfs.ky.gov/agencies/dms/Pages/mcos.aspx"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >List of Managed Care Organizations (MCOs)</a
             >
           </li>
@@ -161,16 +156,15 @@
         <p class="tag"><strong>Last updated:</strong> August 25, 2025</p>
       </section>
     </main>
-
     <footer class="site-footer">
       <p>
         <strong>Dr. KYMN</strong> is a friendly guide, not a medical doctor. Not
         affiliated with any agency. Made in Lexington, KY, by
-        <a href="https://sleepingbear.us" target="_blank" rel="noopener"
+        <a href="https://sleepingbear.us" rel="noopener" target="_blank"
           >Sleeping Bear Labs</a
         >.
       </p>
     </footer>
-    <script src="js/nav.js" defer></script>
+    <script defer="" src="js/nav.js"></script>
   </body>
 </html>
