--- a/who-accepts.html
+++ b/who-accepts.html
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Who Accepts? | The Kentucky Medicaid Notebook</title>
     <meta
-      name="description"
       content="Where to use your Kentucky Medicaid card and how to find providers who accept it."
+      name="description"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&amp;display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="assets/favicon.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link href="assets/favicon.png" rel="icon" />
+    <link href="styles.css" rel="stylesheet" />
+    <link
+      crossorigin="True"
+      href="https://fonts.gstatic.com"
+      rel="preconnect"
+    />
   </head>
   <body>
     <a class="skip-link" href="#main">Skip to content</a>
-
     <header class="topbar">
       <div class="wrap">
         <a class="brandlink" href="index.html">
-          <img class="mini-kymn" src="dr-kymn.png" alt="" />
+          <img alt="" class="mini-kymn" src="dr-kymn.png" />
         </a>
-        <nav class="site-nav" aria-label="Primary">
+        <nav aria-label="Primary" class="site-nav">
           <button
-            class="nav-toggle"
             aria-controls="primary-menu"
             aria-expanded="false"
+            class="nav-toggle"
           >
             <span class="sr-only">Menu</span>
-            <span class="bar" aria-hidden="true"></span>
-            <span class="bar" aria-hidden="true"></span>
-            <span class="bar" aria-hidden="true"></span>
+            <span aria-hidden="true" class="bar"></span>
+            <span aria-hidden="true" class="bar"></span>
+            <span aria-hidden="true" class="bar"></span>
           </button>
-
-          <ul id="primary-menu" class="menu">
+          <ul class="menu" id="primary-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="who-qualifies.html">Who Qualifies?</a></li>
             <li>
-              <a href="who-accepts.html" aria-current="page">Who Accepts?</a>
+              <a aria-current="page" href="who-accepts.html">Who Accepts?</a>
             </li>
             <li><a href="who-drives.html">Who Drives?</a></li>
             <li><a href="apply.html">Apply</a></li>
@@ -50,7 +54,6 @@
         </nav>
       </div>
     </header>
-
     <header class="site-header">
       <h1 class="brand page-title">Who Accepts?</h1>
       <p class="lead">
@@ -58,8 +61,7 @@
         card.
       </p>
     </header>
-
-    <main id="main" class="container">
+    <main class="container" id="main">
       <ul class="card-grid" role="list">
         <li class="info-card">
           <h3>Call your provider</h3>
@@ -68,7 +70,6 @@
             hospital or pharmacy and ask if they take Kentucky Medicaid.
           </p>
         </li>
-
         <li class="info-card">
           <h3>Search the official directory</h3>
           <p>
@@ -78,70 +79,67 @@
           <p>
             <a
               href="https://kynect.ky.gov/benefits/s/find-a-provider"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >Search providers on kynect.ky.gov</a
             >
           </p>
         </li>
-
         <li class="info-card">
-          <h3>Pharmacies & Urgent Care</h3>
+          <h3>Pharmacies &amp; Urgent Care</h3>
           <p>
             Many large pharmacy chains and urgent care centers accept Medicaid,
             but it’s best to call ahead before your visit.
           </p>
         </li>
       </ul>
-
       <section style="margin-top: 1rem">
         <h2 class="section-title">Helpful links</h2>
         <ul>
           <li>
             <a
               href="https://www.aetnabetterhealth.com/kentucky/find-provider"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >Aetna Better Health of Kentucky — Find a Provider</a
             >
           </li>
           <li>
             <a
               href="https://www.passporthealthplan.com/findadoctor"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >Passport Health Plan by Molina — Provider Search</a
             >
           </li>
           <li>
             <a
               href="https://www.wellcareky.com/find-a-provider"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >WellCare of Kentucky — Provider Directory</a
             >
           </li>
           <li>
             <a
               href="https://www.uhccommunityplan.com/ky/medicaid/medicaid/find-provider"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >UnitedHealthcare Community Plan — Find a Provider</a
             >
           </li>
         </ul>
       </section>
     </main>
-
     <footer class="site-footer">
       <p>
         <strong>Dr. KYMN</strong> is a friendly guide, not a medical doctor. Not
         affiliated with any agency. Made in Lexington, KY, by
-        <a href="https://sleepingbear.us" target="_blank" rel="noopener"
+        <a href="https://sleepingbear.us" rel="noopener" target="_blank"
           >Sleeping Bear Labs</a
         >.
       </p>
     </footer>
-    <script src="js/nav.js" defer></script>
+    <script defer="" src="js/nav.js"></script>
   </body>
 </html>
