--- a/who-drives.html
+++ b/who-drives.html
@@ -1,42 +1,47 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Who Drives? | The Kentucky Medicaid Notebook</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&amp;display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="assets/favicon.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link href="assets/favicon.png" rel="icon" />
+    <link href="styles.css" rel="stylesheet" />
     <!-- page-only styles (safe, scoped) -->
-    <link rel="stylesheet" href="css/who-drives.css" />
+    <link href="css/who-drives.css" rel="stylesheet" />
+    <link
+      crossorigin="True"
+      href="https://fonts.gstatic.com"
+      rel="preconnect"
+    />
   </head>
   <body>
     <header class="topbar">
       <div class="wrap">
         <a class="brandlink" href="index.html">
-          <img class="mini-kymn" src="dr-kymn.png" alt="" />
+          <img alt="" class="mini-kymn" src="dr-kymn.png" />
         </a>
-        <nav class="site-nav" aria-label="Primary">
+        <nav aria-label="Primary" class="site-nav">
           <button
-            class="nav-toggle"
             aria-controls="primary-menu"
             aria-expanded="false"
+            class="nav-toggle"
           >
             <span class="sr-only">Menu</span>
-            <span class="bar" aria-hidden="true"></span>
-            <span class="bar" aria-hidden="true"></span>
-            <span class="bar" aria-hidden="true"></span>
+            <span aria-hidden="true" class="bar"></span>
+            <span aria-hidden="true" class="bar"></span>
+            <span aria-hidden="true" class="bar"></span>
           </button>
-
-          <ul id="primary-menu" class="menu">
+          <ul class="menu" id="primary-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="who-qualifies.html">Who Qualifies?</a></li>
             <li><a href="who-accepts.html">Who Accepts?</a></li>
             <li>
-              <a href="who-drives.html" aria-current="page">Who Drives?</a>
+              <a aria-current="page" href="who-drives.html">Who Drives?</a>
             </li>
             <li><a href="apply.html">Apply</a></li>
             <li><a href="after-you-apply.html">After You Apply</a></li>
@@ -46,8 +51,7 @@
         </nav>
       </div>
     </header>
-
-    <main id="kymn-who-drives" class="container">
+    <main class="container" id="kymn-who-drives">
       <header class="page-header">
         <h1>Who Drives?</h1>
         <p class="tagline">
@@ -56,7 +60,6 @@
         </p>
         <p class="meta">Last verified against KYTC: Aug. 22, 2025</p>
       </header>
-
       <section aria-labelledby="how">
         <h2 id="how">How It Works</h2>
         <ol>
@@ -75,37 +78,31 @@
           change—confirm when you call.
         </p>
       </section>
-
       <section aria-labelledby="finder">
         <h2 id="finder">Find your transportation broker</h2>
-
         <!-- County search (type-ahead) -->
         <label class="sr-only" for="kymn-county-search"
           >Search your county</label
         >
         <input
-          id="kymn-county-search"
-          type="search"
-          placeholder="Start typing your county…"
-          list="kymn-county-list"
           aria-describedby="countyHelp"
+          id="kymn-county-search"
+          list="kymn-county-list"
+          placeholder="Start typing your county…"
+          type="search"
         />
         <datalist id="kymn-county-list"></datalist>
-
         <!-- Or choose from full list -->
         <div style="height: 0.5rem"></div>
         <label class="sr-only" for="kymn-county">Choose your county</label>
         <select id="kymn-county" name="county">
           <option value="">— Or select your Kentucky county —</option>
         </select>
-
-        <p id="countyHelp" class="hint">
+        <p class="hint" id="countyHelp">
           Pick from the dropdown or type your county name, then press Enter or
           choose a match.
         </p>
-
-        <div id="kymn-result" aria-live="polite"></div>
-
+        <div aria-live="polite" id="kymn-result"></div>
         <noscript>
           <p>
             <strong>JavaScript is off.</strong> See the KYTC broker list or call
@@ -113,7 +110,6 @@
           </p>
         </noscript>
       </section>
-
       <section aria-labelledby="script">
         <h2 id="script">What To Say</h2>
         <p>
@@ -127,7 +123,6 @@
           <li>Call back ASAP if details change.</li>
         </ul>
       </section>
-
       <section aria-labelledby="help">
         <h2 id="help">If You Have Problems</h2>
         <p>
@@ -137,17 +132,16 @@
         </p>
       </section>
     </main>
-
     <footer class="site-footer">
       <p>
         <strong>Dr. KYMN</strong> is a friendly guide, not a medical doctor. Not
         affiliated with any agency. Made in Lexington, KY, by
-        <a href="https://sleepingbear.us" target="_blank" rel="noopener"
+        <a href="https://sleepingbear.us" rel="noopener" target="_blank"
           >Sleeping Bear Labs</a
         >.
       </p>
     </footer>
-    <script src="js/who-drives.js" defer></script>
-    <script src="js/nav.js" defer></script>
+    <script defer="" src="js/who-drives.js"></script>
+    <script defer="" src="js/nav.js"></script>
   </body>
 </html>
