--- a/faq.html
+++ b/faq.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>FAQ | The Kentucky Medicaid Notebook</title>
     <meta
-      name="description"
       content="Common questions about Kentucky Medicaid basics."
+      name="description"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&amp;display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="assets/favicon.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link href="assets/favicon.png" rel="icon" />
+    <link href="styles.css" rel="stylesheet" />
+    <link
+      crossorigin="True"
+      href="https://fonts.gstatic.com"
+      rel="preconnect"
+    />
   </head>
   <body>
     <a class="skip-link" href="#main">Skip to content</a>
-
     <header class="topbar">
       <div class="wrap">
         <a class="brandlink" href="index.html">
-          <img class="mini-kymn" src="dr-kymn.png" alt="" />
+          <img alt="" class="mini-kymn" src="dr-kymn.png" />
         </a>
-        <nav class="site-nav" aria-label="Primary">
+        <nav aria-label="Primary" class="site-nav">
           <button
-            class="nav-toggle"
             aria-controls="primary-menu"
             aria-expanded="false"
+            class="nav-toggle"
           >
             <span class="sr-only">Menu</span>
-            <span class="bar" aria-hidden="true"></span>
-            <span class="bar" aria-hidden="true"></span>
-            <span class="bar" aria-hidden="true"></span>
+            <span aria-hidden="true" class="bar"></span>
+            <span aria-hidden="true" class="bar"></span>
+            <span aria-hidden="true" class="bar"></span>
           </button>
-
-          <ul id="primary-menu" class="menu">
+          <ul class="menu" id="primary-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="who-qualifies.html">Who Qualifies?</a></li>
             <li><a href="who-accepts.html">Who Accepts?</a></li>
@@ -43,15 +47,13 @@
             <li><a href="apply.html">Apply</a></li>
             <li><a href="after-you-apply.html">After You Apply</a></li>
             <li><a href="renewal.html">Renewal</a></li>
-            <li><a href="faq.html" aria-current="page">FAQ</a></li>
+            <li><a aria-current="page" href="faq.html">FAQ</a></li>
           </ul>
         </nav>
       </div>
     </header>
-
-    <main id="main" class="container">
+    <main class="container" id="main">
       <h1 class="page-title">Frequently Asked Questions</h1>
-
       <details class="faq">
         <summary>Who qualifies for Medicaid in Kentucky?</summary>
         <p>
@@ -62,13 +64,12 @@
         <p>
           <a
             href="https://kynect.ky.gov/benefits"
-            target="_blank"
             rel="noopener"
+            target="_blank"
             >See eligibility and apply at kynect.ky.gov</a
           >
         </p>
       </details>
-
       <details class="faq">
         <summary>What documents count as proof?</summary>
         <p>
@@ -79,7 +80,6 @@
           applying.
         </p>
       </details>
-
       <details class="faq">
         <summary>How long does an application take?</summary>
         <p>
@@ -87,7 +87,6 @@
           Phone or in‑person help is available if you need it.
         </p>
       </details>
-
       <details class="faq">
         <summary>How do I renew or report changes?</summary>
         <p>
@@ -98,14 +97,13 @@
         <p>
           <a
             href="https://kynect.ky.gov/benefits"
-            target="_blank"
             rel="noopener"
+            target="_blank"
             >Manage your case at kynect.ky.gov</a
           >
           or call <a href="tel:18553068959">1‑855‑306‑8959</a>.
         </p>
       </details>
-
       <details class="faq">
         <summary>What if I lost my documents?</summary>
         <p>
@@ -115,13 +113,12 @@
         <p>
           <a
             href="https://chfs.ky.gov/agencies/dcbs/Pages/default.aspx"
-            target="_blank"
             rel="noopener"
+            target="_blank"
             >Find a local DCBS office</a
           >
         </p>
       </details>
-
       <details class="faq">
         <summary>Is this an official state website?</summary>
         <p>
@@ -131,16 +128,15 @@
         </p>
       </details>
     </main>
-
     <footer class="site-footer">
       <p>
         <strong>Dr. KYMN</strong> is a friendly guide, not a medical doctor. Not
         affiliated with any agency. Made in Lexington, KY, by
-        <a href="https://sleepingbear.us" target="_blank" rel="noopener"
+        <a href="https://sleepingbear.us" rel="noopener" target="_blank"
           >Sleeping Bear Labs</a
         >.
       </p>
     </footer>
-    <script src="js/nav.js" defer></script>
+    <script defer="" src="js/nav.js"></script>
   </body>
 </html>
