--- a/index.html
+++ b/index.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>The Kentucky Medicaid Notebook</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta
-      name="description"
       content="Plain-language guide to Kentucky Medicaid and KCHIP."
+      name="description"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&amp;display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="assets/favicon.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link href="assets/favicon.png" rel="icon" />
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <a class="skip-link" href="#main">Skip to content</a>
-
     <!-- Sidebar/topbar nav (shared across site) -->
     <header class="topbar">
       <div class="wrap">
         <a class="brandlink" href="index.html">
-          <img class="mini-kymn" src="dr-kymn.png" alt="" />
+          <img alt="" class="mini-kymn" src="dr-kymn.png" />
         </a>
-        <nav class="site-nav" aria-label="Primary">
+        <nav aria-label="Primary" class="site-nav">
           <button
-            class="nav-toggle"
             aria-controls="primary-menu"
             aria-expanded="false"
+            class="nav-toggle"
           >
             <span class="sr-only">Menu</span>
-            <span class="bar" aria-hidden="true"></span>
-            <span class="bar" aria-hidden="true"></span>
-            <span class="bar" aria-hidden="true"></span>
+            <span aria-hidden="true" class="bar"></span>
+            <span aria-hidden="true" class="bar"></span>
+            <span aria-hidden="true" class="bar"></span>
           </button>
-
-          <ul id="primary-menu" class="menu">
-            <li><a href="index.html" aria-current="page">Home</a></li>
+          <ul class="menu" id="primary-menu">
+            <li><a aria-current="page" href="index.html">Home</a></li>
             <li><a href="who-qualifies.html">Who Qualifies?</a></li>
             <li><a href="who-accepts.html">Who Accepts?</a></li>
             <li><a href="who-drives.html">Who Drives?</a></li>
@@ -47,12 +46,12 @@
             <li><a href="renewal.html">Renewal</a></li>
             <li><a href="faq.html">FAQ</a></li>
             <li>
-              <a href="what-if-denied.html" class="link-denied"
+              <a class="link-denied" href="what-if-denied.html"
                 >What If I'm Denied?</a
               >
             </li>
             <li>
-              <a href="what-if-approved.html" class="link-approved"
+              <a class="link-approved" href="what-if-approved.html"
                 >What If I'm Approved?</a
               >
             </li>
@@ -60,14 +59,13 @@
         </nav>
       </div>
     </header>
-
     <!-- Home header (keep hero ONLY on homepage) -->
     <header class="site-header home-hero">
       <div class="hero-card">
         <img
+          alt="Illustration of Dr. KYMN, a friendly squirrel waving"
           class="kymn-hero kymn-left"
           src="dr-kymn.png"
-          alt="Illustration of Dr. KYMN, a friendly squirrel waving"
         />
         <div class="hero-text">
           <h1 class="brand page-title logo-stack">
@@ -84,12 +82,10 @@
         </div>
       </div>
     </header>
-
     <!-- Card hub -->
-    <main id="main" class="container" aria-labelledby="sections">
-      <h2 id="sections" class="section-title">Pick a section</h2>
+    <main aria-labelledby="sections" class="container" id="main">
+      <h2 class="section-title" id="sections">Pick a section</h2>
       <p class="tag">Everything you need, one click away.</p>
-
       <ul class="card-grid" role="list">
         <li class="info-card">
           <h3><a href="who-qualifies.html">Who Qualifies?</a></h3>
@@ -117,7 +113,7 @@
         </li>
         <li class="info-card">
           <h3>
-            <a href="what-if-denied.html" class="link-denied"
+            <a class="link-denied" href="what-if-denied.html"
               >What If I'm Denied?</a
             >
           </h3>
@@ -125,7 +121,7 @@
         </li>
         <li class="info-card">
           <h3>
-            <a href="what-if-approved.html" class="link-approved"
+            <a class="link-approved" href="what-if-approved.html"
               >What If I'm Approved?</a
             >
           </h3>
@@ -133,17 +129,15 @@
         </li>
       </ul>
     </main>
-
     <footer class="site-footer">
       <p>
         <strong>Dr. KYMN</strong> is a friendly guide, not a medical doctor. Not
         affiliated with any agency. Made in Lexington, KY, by
-        <a href="https://sleepingbear.us" target="_blank" rel="noopener"
+        <a href="https://sleepingbear.us" rel="noopener" target="_blank"
           >Sleeping Bear Labs</a
         >.
       </p>
     </footer>
-
-    <script src="js/nav.js" defer></script>
+    <script defer="" src="js/nav.js"></script>
   </body>
 </html>
