--- a/who-qualifies.html
+++ b/who-qualifies.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Who Qualifies? | The Kentucky Medicaid Notebook</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta
+      content="Clear Kentucky Medicaid &amp; KCHIP income limits (2025), plain-language FPL explainer and links to official sources."
       name="description"
-      content="Clear Kentucky Medicaid & KCHIP income limits (2025), plain-language FPL explainer and links to official sources."
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&amp;display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="assets/favicon.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link href="assets/favicon.png" rel="icon" />
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <a class="skip-link" href="#main">Skip to content</a>
-
     <header class="topbar">
       <div class="wrap">
         <a class="brandlink" href="index.html">
-          <img class="mini-kymn" src="dr-kymn.png" alt="" />
+          <img alt="" class="mini-kymn" src="dr-kymn.png" />
         </a>
-        <nav class="site-nav" aria-label="Primary">
+        <nav aria-label="Primary" class="site-nav">
           <button
-            class="nav-toggle"
             aria-controls="primary-menu"
             aria-expanded="false"
+            class="nav-toggle"
           >
             <span class="sr-only">Menu</span>
-            <span class="bar" aria-hidden="true"></span>
-            <span class="bar" aria-hidden="true"></span>
-            <span class="bar" aria-hidden="true"></span>
+            <span aria-hidden="true" class="bar"></span>
+            <span aria-hidden="true" class="bar"></span>
+            <span aria-hidden="true" class="bar"></span>
           </button>
-
-          <ul id="primary-menu" class="menu">
+          <ul class="menu" id="primary-menu">
             <li><a href="index.html">Home</a></li>
             <li>
-              <a href="who-qualifies.html" aria-current="page"
+              <a aria-current="page" href="who-qualifies.html"
                 >Who Qualifies?</a
               >
             </li>
@@ -53,7 +52,6 @@
         </nav>
       </div>
     </header>
-
     <header class="site-header">
       <h1 class="brand page-title">Who Qualifies?</h1>
       <p class="lead">
@@ -61,40 +59,37 @@
         links to official sources.
       </p>
     </header>
-
-    <main id="main" class="container" aria-labelledby="eligibility">
-      <h2 id="eligibility" class="section-title">
+    <main aria-labelledby="eligibility" class="container" id="main">
+      <h2 class="section-title" id="eligibility">
         Income‑based eligibility (MAGI)
       </h2>
       <p class="tag">
         These groups use FPL% and MAGI rules. Keep scrolling for
         Aged/Blind/Disabled (ABD) rules.
       </p>
-
       <ul class="card-grid" role="list">
         <li class="info-card">
-          <div class="icon-wrap" aria-hidden="true">
-            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-              <circle cx="12" cy="8" r="4" fill="currentColor" />
+          <div aria-hidden="true" class="icon-wrap">
+            <svg aria-hidden="true" focusable="false" viewbox="0 0 24 24">
+              <circle cx="12" cy="8" fill="currentColor" r="4"></circle>
               <path
                 d="M4 20c0-3.3 3.6-6 8-6s8 2.7 8 6"
                 fill="none"
                 stroke="currentColor"
                 stroke-width="2"
-              />
+              ></path>
             </svg>
           </div>
           <h3>Adults (ages 19–64)</h3>
-          <p><strong>Up to 138% FPL</strong> &middot; MAGI rules.</p>
+          <p><strong>Up to 138% FPL</strong> · MAGI rules.</p>
         </li>
-
         <li class="info-card">
-          <div class="icon-wrap" aria-hidden="true">
-            <svg viewBox="0 0 24 24">
+          <div aria-hidden="true" class="icon-wrap">
+            <svg viewbox="0 0 24 24">
               <path
                 d="M12 21s-7-4.35-9.5-8C.9 10.1 2 6.9 5 6c2-.6 3.5.4 4.2 1.4C9.9 6.4 11.4 5.4 13.5 6c3 .9 4.1 4.1 2.5 7-2.5 3.65-9.5 8-9.5 8z"
                 fill="currentColor"
-              />
+              ></path>
             </svg>
           </div>
           <h3>Pregnancy</h3>
@@ -103,28 +98,26 @@
             <strong>12 months postpartum</strong>.
           </p>
         </li>
-
         <li class="info-card">
-          <div class="icon-wrap" aria-hidden="true">
-            <svg viewBox="0 0 24 24">
-              <circle cx="8" cy="8" r="3" fill="currentColor" />
-              <circle cx="16" cy="8" r="3" fill="currentColor" />
+          <div aria-hidden="true" class="icon-wrap">
+            <svg viewbox="0 0 24 24">
+              <circle cx="8" cy="8" fill="currentColor" r="3"></circle>
+              <circle cx="16" cy="8" fill="currentColor" r="3"></circle>
               <path
                 d="M3 20c0-2.5 2.5-4.5 5.5-4.5S14 17.5 14 20M10 20c0-2.5 2.5-4.5 5.5-4.5S21 17.5 21 20"
                 fill="none"
                 stroke="currentColor"
                 stroke-width="2"
-              />
+              ></path>
             </svg>
           </div>
           <h3>Children &amp; teens (under 19)</h3>
           <p>
-            Medicaid: <strong>up to 200% FPL</strong> &middot; KCHIP (CHIP):
+            Medicaid: <strong>up to 200% FPL</strong> · KCHIP (CHIP):
             <strong>up to 218% FPL</strong>.
           </p>
         </li>
       </ul>
-
       <details class="faq">
         <summary>What is FPL? What does %FPL mean?</summary>
         <p>
@@ -135,25 +128,27 @@
           <strong>$26,650</strong>/year.
         </p>
       </details>
-
       <h2 class="section-title" id="abd">Aged, Blind, or Disabled (ABD)</h2>
       <p class="tag">
         ABD Medicaid does <strong>not</strong> use a flat FPL%. Kentucky applies
         SSI‑related income and resource rules; some applicants may qualify via
         <em>spenddown</em>.
       </p>
-
       <ul class="card-grid" role="list">
         <li class="info-card">
-          <div class="icon-wrap" aria-hidden="true">
-            <svg viewBox="0 0 24 24">
+          <div aria-hidden="true" class="icon-wrap">
+            <svg viewbox="0 0 24 24">
               <path
                 d="M12 2l7 3v6c0 5-3.3 9-7 11-3.7-2-7-6-7-11V5l7-3z"
                 fill="none"
                 stroke="currentColor"
                 stroke-width="2"
-              />
-              <path d="M9 12h6M12 9v6" stroke="currentColor" stroke-width="2" />
+              ></path>
+              <path
+                d="M9 12h6M12 9v6"
+                stroke="currentColor"
+                stroke-width="2"
+              ></path>
             </svg>
           </div>
           <h3>ABD rules (summary)</h3>
@@ -166,9 +161,8 @@
           </p>
         </li>
       </ul>
-
       <section aria-labelledby="apply" style="margin-top: 1rem">
-        <h2 id="apply" class="section-title">Apply or check eligibility</h2>
+        <h2 class="section-title" id="apply">Apply or check eligibility</h2>
         <p class="tag">
           Use official Kentucky links to confirm your situation.
         </p>
@@ -176,56 +170,55 @@
           <li>
             <a
               href="https://kynect.ky.gov/benefits/s/medicaid-kchip-program?language=en_US"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >kynect — Kentucky’s official portal</a
             >
           </li>
           <li>
             <a
               href="https://kidshealth.ky.gov/Pages/eligibility.aspx"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >KCHIP eligibility (children up to 218% FPL)</a
             >
           </li>
           <li>
             <a
               href="https://khbe.ky.gov/About/FactsandResources/FPL%20Chart%202025.pdf"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >2025 FPL chart (KHBE PDF)</a
             >
           </li>
           <li>
             <a
               href="https://chfs.ky.gov/agencies/dms/dpo/epb/Pages/enroll.aspx"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >ABD income/resource &amp; spenddown (CHFS)</a
             >
           </li>
           <li>
             <a
               href="https://www.healthcare.gov/glossary/federal-poverty-level-fpl/"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >FPL definitions (healthcare.gov)</a
             >
           </li>
         </ul>
         <p class="tag"><strong>Last updated:</strong> August 22, 2025</p>
       </section>
-
       <section aria-labelledby="sources" style="margin-top: 1rem">
-        <h2 id="sources" class="section-title">Sources</h2>
+        <h2 class="section-title" id="sources">Sources</h2>
         <ol>
           <li>
             kynect (KY): Adults 138% FPL; Pregnancy 200% FPL —
             <a
               href="https://kynect.ky.gov/benefits/s/medicaid-kchip-program?language=en_US"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >kynect.ky.gov</a
             >
           </li>
@@ -233,8 +226,8 @@
             KCHIP/KidsHealth: Children up to 218% FPL —
             <a
               href="https://kidshealth.ky.gov/Pages/eligibility.aspx"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >kidshealth.ky.gov</a
             >
           </li>
@@ -244,8 +237,8 @@
             Apr 1, 2025) —
             <a
               href="https://khbe.ky.gov/About/FactsandResources/FPL%20Chart%202025.pdf"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >khbe.ky.gov (PDF)</a
             >
           </li>
@@ -253,8 +246,8 @@
             CHFS Enrollment: ABD income/resource &amp; spenddown —
             <a
               href="https://chfs.ky.gov/agencies/dms/dpo/epb/Pages/enroll.aspx"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >chfs.ky.gov</a
             >
           </li>
@@ -262,24 +255,23 @@
             Healthcare.gov: FPL glossary / baseline amounts —
             <a
               href="https://www.healthcare.gov/glossary/federal-poverty-level-fpl/"
-              target="_blank"
               rel="noopener"
+              target="_blank"
               >healthcare.gov</a
             >
           </li>
         </ol>
       </section>
     </main>
-
     <footer class="site-footer">
       <p>
         <strong>Dr. KYMN</strong> is a friendly guide, not a medical doctor. Not
         affiliated with any agency. Made in Lexington, KY, by
-        <a href="https://sleepingbear.us" target="_blank" rel="noopener"
+        <a href="https://sleepingbear.us" rel="noopener" target="_blank"
           >Sleeping Bear Labs</a
         >.
       </p>
     </footer>
-    <script src="js/nav.js" defer></script>
+    <script defer="" src="js/nav.js"></script>
   </body>
 </html>
