--- a/index.html
+++ b/index.html
@@ -138,6 +138,6 @@
         >.
       </p>
     </footer>
-    <script defer="" src="js/nav.js"></script>
+    <script defer="" src="js/nav.js?v=nav-2"></script>
   </body>
 </html>
