--- a/who-drives.html
+++ b/who-drives.html
@@ -142,6 +142,6 @@
       </p>
     </footer>
     <script defer="" src="js/who-drives.js"></script>
-    <script defer="" src="js/nav.js"></script>
+    <script defer="" src="js/nav.js?v=nav-2"></script>
   </body>
 </html>
