--- a/who-qualifies.html
+++ b/who-qualifies.html
@@ -272,6 +272,6 @@
         >.
       </p>
     </footer>
-    <script defer="" src="js/nav.js"></script>
+    <script defer="" src="js/nav.js?v=nav-2"></script>
   </body>
 </html>
