style(section-intro): align "Pick a section" block with card grid gutters

--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
     </header>
     <!-- Card hub -->
     <main aria-labelledby="sections" class="container" id="main">
-      <h2 class="section-title" id="sections">Pick a section</h2>
-      <p class="tag">Everything you need, one click away.</p>
+      <div class="section-intro">
+        <h2 class="section-title" id="sections">Pick a section</h2>
+        <p class="tag">Everything you need, one click away.</p>
+      </div>
       <ul class="card-grid" role="list">
         <li class="info-card">
           <h3><a href="who-qualifies.html">Who Qualifies?</a></h3>
