--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="assets/favicon.png" rel="icon" />
     <link href="styles.css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="home">
     <a class="skip-link" href="#main">Skip to content</a>
     <!-- Sidebar/topbar nav (shared across site) -->
     <header class="topbar">
